--- a/Templates/SolutionTemplate/Template.Resources/Text/TextResources.resx
+++ b/Templates/SolutionTemplate/Template.Resources/Text/TextResources.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AppTitle" xml:space="preserve">
-    <value>$safeprojectname$</value>
+    <value>$ext_safeprojectname$</value>
   </data>
 </root>
